added mobile compataibility

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Justin Luo</title>
   <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -115,12 +116,9 @@
 
     <!-- Left on Read -->
 
-    <div class="project-wrapper" id="left-project">
-      <!-- <div class="project-background" id="left">
-    </div> -->
+    <div class="project-wrapper" >
     <a class="project-link" href="./pages/lor.html">
-
-      <div class="large-project-card" id="left-section">
+      <div class="large-project-card">
         <div class="project-card-header">
           <div class="project-name">
             <h2 class="project-title">Left On Read</h2>
@@ -138,13 +136,9 @@
           <div class="project-description">
             <p> "Analyze your texts. Explore the data. See who your friends are."</p>
             <p> Left On Read allows users to analyze their Messages conversations on macOS devices. </p>
-            <!-- <p> Left On Read is a website that allows users to view analytics about their Messages conversations on macOS devices. Left On Read started as a final group project for my Full Stack Web Development class.</p> -->
               <div class="see-more-button" id="lor">
-
               <p class="project-link-text">See more</p>
-
             </div>
-
         </div>
           <div class="project-photo">
             <img class="project-img" src="./img/lor-logo.png" />
@@ -152,17 +146,13 @@
         </div>
       </div>
     </a>
-
     </div>
 
-
     <!-- Unmasked -->
-    <div class="project-wrapper" id="right-project">
-      <!-- <div class="project-background" id="right">
-    </div> -->
-    <a class="project-link" href="./pages/unmasked.html">
 
-      <div class="large-project-card" id="right-section">
+    <div class="project-wrapper" >
+    <a class="project-link" href="./pages/unmasked.html">
+      <div class="large-project-card">
         <div class="project-card-header">
           <div class="project-name">
             <h2 class="project-title">Unmasked</h2>
@@ -178,17 +168,12 @@
         </div>
         <div class="project-card-content">
           <div class="project-description">
-            <p class="tagline"> "How might we create a annonymous community to discuss mental health issues at Dartmouth?
-              "
-            </p>
+            <p class="tagline"> "How might we create a annonymous community to discuss mental health issues at Dartmouth?"  </p>
             <p>Unmasked is a mobile application that allows students to annonymously
               discuss mental health and other personal issues.</p>
-
               <div class="see-more-button" id="unmasked">
-
               <p class="project-link-text">See more</p>
             </div>
-
         </div>
           <div class="project-photo">
             <img class="project-img" src="./img/unmasked-icon.png" />
@@ -196,16 +181,14 @@
         </div>
       </div>
     </a>
-
     </div>
 
     <!-- STIC -->
-    <div class="project-wrapper" id="left-project">
-      <!-- <div class="project-background" id="left">
-    </div> -->
+    <div class="project-wrapper" >
+
     <a class="project-link" href="./pages/stic.pdf" target="_blank">
 
-      <div class="large-project-card" id="left">
+      <div class="large-project-card">
         <div class="project-card-header">
           <div class="project-name">
             <h2 class="project-title">STIC</h2>
@@ -385,12 +368,11 @@
     <div class="adventure-photos">
       <div class="adventure-column">
         <img class="adventure-photo" src="./img/photos/utah-ls.jpg">
-        <img class="adventure-photo" src="./img/photos/utah-p3.jpg">
-        <img id="hidden" class="adventure-photo" src="./img/photos/utah-ls2.jpg">
+        <img class="adventure-photo" src="./img/photos/utah-p2.jpg">
       </div>
       <div class="adventure-column">
         <img class="adventure-photo" src="./img/photos/utah-ls3.jpg">
-        <img id="hidden" class="adventure-photo" src="./img/photos/utah-p2.jpg">
+        <img class="adventure-photo" src="./img/photos/utah-ls2.jpg">
       </div>
     </div>
   </div>
@@ -412,10 +394,10 @@
     <div class="adventure-photos">
       <div class="adventure-column">
         <img class="adventure-photo" src="./img/photos/az-p.jpg">
-        <img class="adventure-photo" src="./img/photos/az-p2.jpg">
+        <!-- <img class="adventure-photo" src="./img/photos/az-p2.jpg"> -->
       </div>
       <div class="adventure-column">
-        <img class="adventure-photo" src="./img/photos/az-p3.jpg">
+        <!-- <img class="adventure-photo" src="./img/photos/az-p3.jpg"> -->
         <img class="adventure-photo" src="./img/photos/az-p4.jpg">
       </div>
     </div>
@@ -456,17 +438,19 @@
       <div class="adventure-title">
         Dartmouth, NH
       </div>
+      <div class="adventure-sub">
+        2017 - Present
+      </div>
     </div>
     <div class="adventure-photos">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/dartmouth-p1.jpg">
+        <img class="adventure-photo" src="./img/photos/dartmouth-p.jpg">
+      </div>
       <div class="adventure-column">
         <img class="adventure-photo" src="./img/photos/dartmouth-ls.jpg">
         <img class="adventure-photo" src="./img/photos/dartmouth-ls2.jpg">
         <img class="adventure-photo" src="./img/photos/dartmouth-ls3.jpg">
-
-      </div>
-      <div class="adventure-column">
-        <img class="adventure-photo" src="./img/photos/dartmouth-p1.jpg">
-        <img class="adventure-photo" src="./img/photos/dartmouth-p.jpg">
       </div>
     </div>
   </div>
@@ -788,6 +772,7 @@
     crossorigin="anonymous"></script>
   <script src="./js/bootstrap.js"></script>
   <script type="text/javascript" src="./js/main.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </div>
 
 <div>
