revision to unmasked

--- a/pages/lor.html
+++ b/pages/lor.html
@@ -55,7 +55,7 @@
   <div class="page-body">
     <!-- Problem -->
     <div class="title-wrapper">
-      <h1 class="section-title">Problem</h1>
+      <h1 class="project-section-title">Problem</h1>
       <img class="section-number" src="../img/1.png" alt="1">
     </div>
 
@@ -87,7 +87,7 @@
 
     <!-- User Research -->
     <div class="title-wrapper">
-      <h1 class="section-title">User Research</h1>
+      <h1 class="project-section-title">User Research</h1>
       <img class="section-number" src="../img/2.png" alt="2">
     </div>
 
@@ -152,7 +152,7 @@
 
 
     <div class="title-wrapper">
-      <h1 class="section-title">Ideate</h1>
+      <h1 class="project-section-title">Ideate</h1>
       <img class="section-number" src="../img/3.png" alt="3">
     </div>
 
@@ -231,7 +231,7 @@
     </div>
 
     <div class="title-wrapper">
-      <h1 class="section-title">Prototype</h1>
+      <h1 class="project-section-title">Prototype</h1>
       <img class="section-number" src="../img/4.png" alt="4">
     </div>
 
@@ -264,7 +264,7 @@
       <h3 class="page-quote-author"> Dartmouth Student '19 </h3>
     </div>
     <div class="title-wrapper">
-      <h1 class="section-title">Product</h1>
+      <h1 class="project-section-title">Product</h1>
       <img class="section-number" src="../img/5.png" alt="5">
     </div>
 
@@ -274,7 +274,7 @@
     </div>
 
     <div class="title-wrapper ">
-      <h1 class="section-title ">Next Steps</h1>
+      <h1 class="project-section-title ">Next Steps</h1>
       <img class="section-number " src="../img/6.png " alt="6 ">
     </div>
 
