updates to unmasked

--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -31,7 +31,7 @@
 
     <div id="button">
       <a id="resume-link" href="https://www.figma.com/proto/LI3cU3sIR3GX7roMANaw84bG/Hi-Fis?node-id=274%3A360&scaling=scale-down" target="_blank">
-        <p id="see-resume">Try the prototype</p>
+        <p id="see-resume">See the prototype</p>
       </a>
     </div>
   </div>
@@ -215,6 +215,12 @@
       in most forums because it can be hard to track where the discussion is going.
     </p>
 
+    <div class="images-collage">
+
+      <img class="example-image" width="375px" height="440px" src="../img/unmasked/comment-structure.gif"/>
+
+    </div>
+
     <p class="page-normal-text"> We felt that this system we created provided the best of both world. Since each initial comment usually
       responds to the original post in a new direction, we thought that these would be great 'converstaion
       starters'. Responses and comments in these sub-conversations would be grouped together to keep
@@ -225,18 +231,30 @@
     <p class="page-small-title"> Identicons
     </p>
 
+    <div class="images-collage">
+
+      <img id="identicon-gif" class="example-image" src="../img/unmasked/identicon-example.gif"/>
+
+    </div>
     <p class="page-normal-text"> We stressed anonymity throughout the design phase, but we feared that total anonymity
       would discourage users from truly interacting with each other. We wanted users to be able to differentiate themselves
       from others, but also not label themselves through a username (which could cause issues with privacy or inappropriate names).
-      As a result, we looked into avatars and how platforms like Yik Yak and Slack created user identifies without breaking anonymity.
-      After much research, we came across Identicons, random shapes generated using a hash function from any string of characters.
+      As a result, we looked into how platforms like Yik Yak created user identifies through avatars without breaking anonymity.
+      We came across Identicons, random shapes generated using a hash function from any string of characters.
       We believed that these identicons could help users connect with each other without clearly labeling a user as a certain avatar.
       The shapes offered just enough abstraction to help users blend in the crowd for normal users, but also help distinguish users
-      during direct messages.
+      during direct messages. Specifically, we wanted to use the JDenticon library, as shown above.
     </p>
+
 
     <p class="page-small-title"> Reactions
     </p>
+
+    <div class="images-collage">
+
+      <img src="../img/unmasked/reaction-draft.png" class="example-image" height="157px" width="375px"/>
+
+    </div>
 
     <p class="page-normal-text"> We knew we wanted to encourage genuine connections through Unmasked, but we questioned
       the use of "likes" that most social media platforms used as engagement. We brainstormed various ways that users could react,
@@ -340,6 +358,12 @@
     <!-- <div class="see-more-button" id="unmasked-demo">
     <p class="project-link-text" id="unmasked-demo-link">Try the demo!</p>
   </div> -->
+
+  <div id="project-button">
+    <a id="prototype-link" href="https://www.figma.com/proto/LI3cU3sIR3GX7roMANaw84bG/Hi-Fis?node-id=274%3A360&scaling=scale-down" target="_blank">
+      <p >See the prototype</p>
+    </a>
+  </div>
 
     <p class="page-normal-text"> We designed with cool and warm colors that promoted comfort and low-stress. For our main fonts, we
       decided to use Comfortaa because of its gentle curves in titles, and used Lato for clean and clear
