left on read additions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
   <!-- Navigation bar -->
   <nav>
+    <div class="navbar-background-blur">
+    </div>
     <div>
       <ul class="navbar">
         <li class="navbar-item-logo">
