--- a/pages/lor.html
+++ b/pages/lor.html
@@ -64,24 +64,47 @@
       <h3 class="page-quote-author"> Alex Danilowicz, Left On Read Founder </h3>
     </div>
 
-    <p class="page-normal-text"> That's where Left On Read was born. But as the idea matured, we realized that a product like Left
-      On Read empowers users by giving the data back to them.
+    <p class="page-normal-text"> In the last decade, communication through online text has skyrocketed. Our culture has transformed to include
+       texts and social media messaging as some of our main forms of communication. With some quick taps on our phones, we can instantly connect with anyone across
+       the world.
+     </p>
+
+     <p class="page-normal-text"> As we have adopted the use of text messages, we have also adopted different habits regarding it. We all
+       know someone who takes forever to respond to texts. Or someone who uses way to many Emojis (I'm looking at you Mom). And the person who uses "haha"
+       and "lol" way too often. The list goes on and on...
+    </p>
+
+    <p class="page-normal-text"> Likely, you can easily describe someone's texting "type" after only a few conversations. You probably
+      even have a pretty good idea about your own texting habits. But it can be hard to know for certain without quantitative data.
+     </p>
+
+    <!-- <p class="page-normal-text"> That's where Left On Read was born - a simple to prove one's point. But as the idea matured,
+      we realized that a product like Left On Read empowers users by giving the data back to them.
     </p>
 
     <p class="page-normal-text"> Our data is being tracked everywhere. From our Google searches, to our Amazon shopping carts, to
-      even our emails at work, companies store and analyze data about our online activity.</p>
+      even our emails at work, companies store and analyze data about our online activity.</p> -->
 
-    <h2 class="page-small-title"> But why not let the user analyze his/her own data? </h2>
+    <h2 class="page-small-title"> That's where Left On Read steps in.</h2>
 
-    <p class="page-normal-text"> We wanted to start with the most common form of communication in today's world: text messages. Our
-      goal was to analyze Messager and iMessage conversations on macOS computers, and share the data
-      back with the user. </p>
+    <p class="page-normal-text"> We wanted to start with one of the most common form of communication in today's world, especially
+      among college students: iMessage texts. Our goal was to analyze iMessage conversations on macOS computers, and share the data
+      back with the user.</p>
+
+      <p class="page-normal-text"> We talked to friends, classmates, and faculty about our idea. Although some were skeptical about
+      the impact that the data would have on them, everyone seemed to be curious in at least viewing data about their
+      text message habits. And that was enough to propel us towards building mockups and an initial prototype.</p>
+
+     <p class="page-normal-text"> By allowing users to view analytics about their text messages, we wanted users to learn about
+       their texting habits and better understand how their communicate with others. We wanted to tap into that feeling of curiosity
+       that people initially mentioned in our first conversations, and we hoped to eventually create a platform that allowed users
+       to explore things that they didn't know about their texting habits.</p>
 
     <h3 class="page-small-title"> Initial design challenges </h3>
     <ul class="page-list">
-      <li class="page-list-item">How might we make the data impactful? </li>
-      <li class="page-list-item">How might we make the data exciting? </li>
-      <li class="page-list-item">How might we keep the user engaged beyond a one time use?</li>
+      <li class="page-list-item">How might we make the data <b>impactful</b>?</li>
+      <li class="page-list-item">How might we make the data <b>exciting</b>? </li>
+      <li class="page-list-item">How might we keep the user <b>engaged</b> beyond a one time use?</li>
     </ul>
 
 
@@ -91,10 +114,9 @@
       <img class="section-number" src="../img/2.png" alt="2">
     </div>
 
-    <p class="page-normal-text"> Through our user interviews, we were met with mixed opinions about a text message analyzing service.
-      Some were concerned about overanalyzing their relationships. Others believed that a service like
-      Left On Read would be a shallow representation of a relationship. But one user quote defined a
-      new focus for our team...
+    <p class="page-normal-text"> Through our user interviews, we gathered information on features that our users
+      would be most interested in, including the ability to filter analytics by conversation with a specific person.
+      But one user quote defined new focus for our team...
     </p>
 
     <div class="page-quote-background">
@@ -111,6 +133,8 @@
       were able to empathize with our target audience and dive into the project with their needs and
       wants in mind.
     </p>
+
+
 
     <div class="carousel-wrapper">
 
@@ -179,12 +203,19 @@
       site navigation was already straightforward.
     </p>
 
-    <p class="page-normal-text"> One of the main constraints that we worked within was the upload process for the 'chat.db' file on
-      Apple computers that contained all of the text conversations. Because of how the file is stored,
-      we needed to provide clear instructions to the user during the upload process. We bounced around
-      several ideas, from a slideshow tutorial process to even making a short GIF outlining the process.
-      This crucial part of the user flow was something we tested and reiterated multiple times during
-      the prototype phase. </p>
+    <h1 class="page-small-title"> Constraints </h1>
+
+    <p class="page-normal-text">Early on, we had to make several design sacrafices due to technical constraints.
+      For example, we strongly believed that making an iOS app for iPhones would have been ideal, because our user interviews showed
+      that not all of iPhone users had a Mac computer that they also texted from. However, Apple’s iOS infrastructure made it nearly
+      impossible to access iMessage conversations from a third-party app without jailbreaking. The only plausible way we could quickly
+      access the texts was through a "chat.db" file that Mac computers store when the user is logged into Messages onto their computer.</p>
+
+
+    <p class="page-normal-text"> Another one of the main constraints that we worked within was the upload process for the 'chat.db' file on
+      Apple computers. Because of how the file is stored, we needed to provide clear instructions to the user during the upload process.
+      We brainstormed and tested several onboarding methods, including a slideshow tutorial process, a short GIF outlining the process, and
+      simple text directions. </p>
 
 
     <h1 class="page-small-title"> Initial Hi-Fis </h1>
@@ -287,7 +318,11 @@
       of exploration when we first got our data. It was clear that people loved to see data about themselves.</p>
 
     <p class="page-normal-text "> Since the end of spring 2018, we have been working on a design overhaul and preparing for a mass
-      launch to the rest of the world. Check out what we're up to at leftonread.me </p>
+      launch to the rest of the world. In the fall of 2018, we were accepted as a partner project for the DALI Lab, and onboarded
+      two new designers and one new developer for the term. I have since taken a step away from the project because of my study abroad
+      in Budapest, but look forward to working on the project when I return! Check out what we're up to at
+      <a class="next-link" id="page-link" target="_blank" href="http://leftonread.me">leftonread.me</a>.
+    </p>
 
       <div class="next-links-container">
           <a class="next-link" href="../index.html">
