--- a/pages/lor.html
+++ b/pages/lor.html
@@ -65,13 +65,13 @@
     </div>
 
     <p class="page-normal-text"> In the last decade, communication through online text has skyrocketed. Our culture has transformed to include
-       texts and social media messaging as some of our main forms of communication. With some quick taps on our phones, we can instantly connect with anyone across
+       texts and social media messaging as some of our main forms of communication. With only a quick taps on our phones, we can instantly connect with anyone across
        the world.
      </p>
 
      <p class="page-normal-text"> As we have adopted the use of text messages, we have also adopted different habits regarding it. We all
-       know someone who takes forever to respond to texts. Or someone who uses way to many Emojis (I'm looking at you Mom). And the person who uses "haha"
-       and "lol" way too often. The list goes on and on...
+       know someone who takes forever to respond to texts. Or someone who uses way to many Emojis (I'm looking at you Mom!). And the person who uses "haha"
+       and "lol" way too often. The list goes on and on.
     </p>
 
     <p class="page-normal-text"> Likely, you can easily describe someone's texting "type" after only a few conversations. You probably
@@ -92,7 +92,7 @@
       back with the user.</p>
 
       <p class="page-normal-text"> We talked to friends, classmates, and faculty about our idea. Although some were skeptical about
-      the impact that the data would have on them, everyone seemed to be curious in at least viewing data about their
+      the impact that the data would have on them, everyone seemed to be curious in at least viewing analytics about their
       text message habits. And that was enough to propel us towards building mockups and an initial prototype.</p>
 
      <p class="page-normal-text"> By allowing users to view analytics about their text messages, we wanted users to learn about
@@ -126,7 +126,7 @@
     </div>
 
     <p class="page-normal-text"> From this point, we knew we had to focus on creating a comfortable and trusting environment for the
-      user to interact with the website. We looked at how other websites that handled sensitve information,
+      user to interact with the website. We looked at how other websites that handle sensitive information,
       and drew inspiration from Apple, Google and even 23andMe. </p>
 
     <p class="page-normal-text"> By creating user personas for different user groups that we identified through our interviews, we
@@ -205,12 +205,11 @@
 
     <h1 class="page-small-title"> Constraints </h1>
 
-    <p class="page-normal-text">Early on, we had to make several design sacrafices due to technical constraints.
+    <p class="page-normal-text">Early on, we had to make several design sacrifices due to technical constraints.
       For example, we strongly believed that making an iOS app for iPhones would have been ideal, because our user interviews showed
       that not all of iPhone users had a Mac computer that they also texted from. However, Apple’s iOS infrastructure made it nearly
       impossible to access iMessage conversations from a third-party app without jailbreaking. The only plausible way we could quickly
       access the texts was through a "chat.db" file that Mac computers store when the user is logged into Messages onto their computer.</p>
-
 
     <p class="page-normal-text"> Another one of the main constraints that we worked within was the upload process for the 'chat.db' file on
       Apple computers. Because of how the file is stored, we needed to provide clear instructions to the user during the upload process.
@@ -276,17 +275,18 @@
 
     <p class="page-normal-text"> From the feedback, we knew which parts we had to improve before launch day. We added moments of 'delight'
       to our project, including fade in animations and a revamped loading screen. We also iterated on
-      several different versions for our upload instructions, eventually setlling on simple text commands
+      several different versions for our upload instructions, eventually settling on simple text commands
       after further user testing. </p>
 
     <p class="page-normal-text"> One of the biggest things that we took away from our prototype stage was the fact that our users
       wanted more than just quantitative data. Our biggest addition was a sentiment analysis system,
-      in which we looked for key words that indicated happiness, anger, stress, love, and outgoingness
+      in which we looked for keywords that indicate happiness, anger, stress, love, and outgoingness
       (which we called the 'social' sentiment). </p>
 
     <p class="page-normal-text"> Originally, we just displayed scores for each sentiment in the analytics, but we began to see a larger
-      potential for the new sentiment. For example, we created a 'Reconnect' graph that displayed contacts
-      with high love sentiment, but hadn't been in communication for a period of time.
+      potential for the new sentiment scores. For example, we created a 'Reconnect' graph that displayed contacts
+      with high love sentiment, but hadn't been in communication for a period of time. We believed that this type of feedback analysis
+      could help our users improve their relationships with others through text messages.
     </p>
 
     <h3 class="page-normal-text"> My favorite bit of feedback...</h3>
@@ -294,6 +294,7 @@
       <h1 class="page-large-quote"> "I was definitely a skeptic at first, but this data is so interesting!"</h1>
       <h3 class="page-quote-author"> Dartmouth Student '19 </h3>
     </div>
+
     <div class="title-wrapper">
       <h1 class="project-section-title">Product</h1>
       <img class="section-number" src="../img/5.png" alt="5">
@@ -304,13 +305,28 @@
       <img class="large-gif" src="../img/lor/graphs.gif" alt="graphs animations" />
     </div>
 
+    <div id="project-button">
+      <a id="prototype-link" href="https://leftonread.me" target="_blank">
+        <p >See the website</p>
+      </a>
+    </div>
+
+    <p class="page-normal-text"> As the number of graphs increased, we needed a more efficient way to organize the
+      analytics. Because our analytics could be grouped based on the type of information they showed, we believed that
+      the tab system implemented above could promote fluid exploration without overwhelming the user.
+    </p>
+
+
+
     <div class="title-wrapper ">
       <h1 class="project-section-title ">Next Steps</h1>
       <img class="section-number " src="../img/6.png " alt="6 ">
     </div>
 
     <p class="page-normal-text "> From the outstanding positive feedback from both our peers and faculty, we knew that we wanted to
-      expand Left On Read to our friends and family, and possibly even the world. </p>
+      expand Left On Read to our friends and family, and possibly even the world. With our increased user base, we were able to receive
+      much more user feedback. Since then, we've added several features to make the user process more exciting, including more filter
+      options and the ability to share graphs on social media.</p>
 
     <p class="page-normal-text "> Even from the start, we knew that Left On Read wasn't going to change the world. We were first interested
       in the project because of the proposed challenge of parsing texts and displaying analytics. But
