--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -26,7 +26,7 @@
       <h1 class="page-title">UNMASKED</h1>
       <h2 class="page-role">UI/UX DESIGNER</h2>
       <h2 class="page-team">with Dorothy Qu and Eric Wang</h2>
-      <h3 class="page-tagline">How might we create a annonymous community to discuss mental health issues at Dartmouth?</h3>
+      <h3 class="page-tagline">How might we create a anonymous community to discuss mental health issues at Dartmouth?</h3>
     </div>
 
     <div id="button">
@@ -110,7 +110,7 @@
       measurements (e.g. number of likes), and this measurement puts pressure on the user to post popular
       posts that appealed to the mass audience. On Reddit, discussion is organized in a hierarchy so
       that the most liked comments are displayed first. For forums, discussion in posts and comments
-      is usually chronoloigally ordered, creating an equal but often unorganized discussion that can
+      is usually chronologically ordered, creating an equal but often unorganized discussion that can
       branch into several sub-discussions.
     </p>
 
@@ -209,7 +209,7 @@
     </p>
 
     <p class="page-normal-text"> One of the biggest challenges during the ideate phase was coming up with a comment section design
-      that promoted equal discussion while still maintaing some level of organization. We didn't want
+      that promoted equal discussion while still maintaining some level of organization. We didn't want
       to use Reddit's hierarchy system because we felt it promoted only 'top' comments and felt jumbled
       after the initial branches. We also wanted more organization that just a simple chronological system
       in most forums because it can be hard to track where the discussion is going.
@@ -222,7 +222,7 @@
     </div>
 
     <p class="page-normal-text"> We felt that this system we created provided the best of both world. Since each initial comment usually
-      responds to the original post in a new direction, we thought that these would be great 'converstaion
+      responds to the original post in a new direction, we thought that these would be great 'conversation
       starters'. Responses and comments in these sub-conversations would be grouped together to keep
       the discussion organized, while allowing new contributors to equally add to the conversation. Therefore,
       the comment section would encourage discussion while still maintaining some level of organization.
